edition = "2023";  // successor to proto2 and proto3

package central;

import "storage/process_baseline.proto";
import "google/protobuf/go_features.proto";

option go_package = "./internalapi/central;central";
option features.(pb.go).api_level = API_HYBRID;

message BaselineSync {
  repeated storage.ProcessBaseline baselines = 1;
}
